@@ -2,6 +2,11 @@
 	- Included configure.ac changes from ldns.
 	- detect (some) headers before the standards check.
 	- do not use isblank to test c99, since its not available on solaris9.
+	- review of testcode.
+		* entries in a RANGE are no longer reversed.
+		* print name of file with replay entry parse errors.
+	- port to OSX: cast to int for some prints of sizet.
+	- Makefile copies ldnstestpkts.c before doing dependencies on it.
 
 13 February 2007: Wouter
 	- work on fake events, first fwd replay works.
